<resources>
    <string name="app_name">Sensors</string>
    <string name="light_lux">Light ( Lux )</string>
    <string name="temp">Temperature</string>
    <string name="gravity">Gravity</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="view_compass">View Compass</string>
    <string name="sensor_type">Sensor Type</string>
    <string name="value">Value</string>
</resources>
