<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:background="#0079D6" android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sensor_type" />

            <TextView
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value" />
        </TableRow>

        <TableRow  android:background="#DAE8FC" android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/luxString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_lux" />

            <TextView
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
      />
        </TableRow>

        <TableRow  android:background="#DAE8FC" android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/TempString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView android:background="#DAE8FC" android:padding="5dp"
                android:id="@+id/gravityString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/gravity" />

            <TextView
                android:id="@+id/gx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/gy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/gz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />
        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/accelerometerString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />

        </TableRow>

    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compassActivityButton"
        android:onClick="launchCompass"
        android:text="@string/view_compass"
        />


</LinearLayout>